# sesoko

./: .gitignore  README.md  caption_images.py  pyproject.toml
scripts/: caption_images.py  crop_yolo.py
src/: caption_images.py  crop_yolo.py
src/lib/: image_utils.py
tests/: __init__.py  conftest.py  test_crop_yolo.py  test_image_utils.py
yolo/: README.md  main.py  pyproject.toml
yolo/scripts/: convert_floats.py
yolo/src/: __init__.py  dataset.py  generate.py  main.py  preprocess.py  train.py
yolo/src/lib/: __init__.py  dataset.py  preprocess.py
yolo/src/stable_diffusion/: __init__.py  generate.py  train.py
yolo/src/zimage/: __init__.py  dataset.py  generate.py  train.py
yolo/tests/: conftest.py  test_dataset.py  test_preprocess.py
