[project]
name = "image-captioner"
version = "0.1.0"
description = "Image captioning using PaliGemma 2 for martial arts domain"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "transformers>=4.57.0",
    "accelerate>=1.12.0",
    "pillow>=12.1.0",
    "pillow-heif>=1.1.0",
    "bitsandbytes>=0.49.0",
    "sentencepiece>=0.2.0",
    "protobuf>=6.33.1",
    "matplotlib>=3.10.7",
    "tomli-w>=1.1.0",
   # "flash-attn>=2.8.3",
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu130" }
torchvision = { index = "pytorch-cu130" }

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint.isort]
known-first-party = ["caption_images"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

